<?xml version="1.0"?>
<package>
  <name>beginner_tutorials</name>
  <version>0.0.1</version>
  <description>The beginner_tutorials package creat by SRn</description>

  <maintainer email="doctorsrn@gmail.com">SRn</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/beginner_tutorials</url>

  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
